--- a/pulsar-functions/proto/pom.xml
+++ b/pulsar-functions/proto/pom.xml
@@ -41,6 +41,12 @@
             <version>3.5.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.grpc</groupId>
+            <artifactId>grpc-all</artifactId>
+            <version>1.5.0</version>
+        </dependency>
+
     </dependencies>
     <build>
         <extensions>
