--- a/kubernetes/google-kubernetes-engine/bookie.yaml
+++ b/kubernetes/google-kubernetes-engine/bookie.yaml
@@ -22,7 +22,7 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: ssd
+  name: bookie-ssd
 provisioner: kubernetes.io/gce-pd
 parameters:
   type: pd-ssd
@@ -33,7 +33,7 @@ parameters:
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: hdd
+  name: bookie-hdd
 provisioner: kubernetes.io/gce-pd
 parameters:
   type: pd-standard
@@ -122,7 +122,7 @@ spec:
         resources:
           requests:
             storage: 10Gi
-        storageClassName: ssd
+        storageClassName: bookie-ssd
     - metadata:
         name: ledger-disk
       spec:
@@ -130,7 +130,7 @@ spec:
         resources:
           requests:
             storage: 10Gi
-        storageClassName: hdd
+        storageClassName: bookie-hdd
 ---
 # A headless service to create DNS records
 apiVersion: v1
@@ -143,7 +143,6 @@ metadata:
     app: pulsar
     component: bookkeeper
 spec:
-  ports:
   ports:
     - name: bookie
       port: 3181
