--- a/conf/standalone.conf
+++ b/conf/standalone.conf
@@ -344,3 +344,9 @@ webSocketNumIoThreads=8
 
 # Number of connections per Broker in Pulsar Client used in WebSocket proxy
 webSocketConnectionsPerBroker=8
+
+
+### --- Metrics --- ###
+
+# Enable topic level metrics
+topicMetricsEnabled=true
