--- a/pulsar-functions/worker/src/test/resources/test_worker_config.yml
+++ b/pulsar-functions/worker/src/test/resources/test_worker_config.yml
@@ -21,6 +21,6 @@ workerId: test-worker
 workerPort: 7654
 zookeeperServers: localhost:1234
 pulsarServiceUrl: pulsar://localhost:6650
-functionMetadataTopic: test-function-metadata-topic
+functionMetadataTopicName: test-function-metadata-topic
 numFunctionPackageReplicas: 3
 
