Added ability for a function to consume multiple input topics (#118)

--- a/pulsar-functions/cli/src/test/resources/test_function_config.yml
+++ b/pulsar-functions/cli/src/test/resources/test_function_config.yml
@@ -19,5 +19,6 @@
 
 name: test-function
 className: org.apache.pulsar.functions.test.TestFunction
-sourceTopic: test-source-topic
+inputs:
+  "test-source-topic" : "org.apache.pulsar.functions.runtime.serde.Utf8StringSerDe"
 sinkTopic: test-sink-topic
