Load-balancer consider max-topic threshold on broker-ownership selection (#1005)

--- a/conf/standalone.conf
+++ b/conf/standalone.conf
@@ -288,6 +288,9 @@ loadBalancerSheddingIntervalMinutes=5
 # Prevent the same topics to be shed and moved to other broker more that once within this timeframe
 loadBalancerSheddingGracePeriodMinutes=30
 
+# Usage threshold to allocate max number of topics to broker
+loadBalancerBrokerMaxTopics=50000
+
 # Interval to flush dynamic resource quota to ZooKeeper
 loadBalancerResourceQuotaUpdateIntervalMinutes=15
 
