Include BoringSSL native implementation for faster TLS

--- a/pulsar-client-shaded/pom.xml
+++ b/pulsar-client-shaded/pom.xml
@@ -75,6 +75,8 @@
                   <include>com.fasterxml.jackson.core</include>
                   <include>io.netty:netty</include>
                   <include>io.netty:netty-all</include>
+                  <include>io.netty:netty-tcnative-boringssl-static</include>
+                  
                   <include>org.apache.pulsar:pulsar-common</include>
                   <include>org.apache.pulsar:pulsar-checksum</include>
                   <include>net.jpountz.lz4:lz4</include>
