--- a/pulsar-common/pom.xml
+++ b/pulsar-common/pom.xml
@@ -70,5 +70,11 @@
       <artifactId>pulsar-checksum</artifactId>
       <version>${project.version}</version>
     </dependency>
+    
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-tcnative-boringssl-static</artifactId>
+      <version>2.0.7.Final</version>
+    </dependency>
   </dependencies>
 </project>
