Publish pulsar-client-admin as a shaded artifact

--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,7 @@ flexible messaging model and an intuitive client API.</description>
     <module>pulsar-broker</module>
     <module>pulsar-broker-shaded</module>
     <module>pulsar-client-admin</module>
+    <module>pulsar-client-admin-shaded</module>
     <module>pulsar-client-tools</module>
     <module>pulsar-client</module>
     <module>pulsar-client-shaded</module>
