--- a/pulsar-broker/pom.xml
+++ b/pulsar-broker/pom.xml
@@ -75,7 +75,7 @@
 
     <dependency>
       <groupId>${project.groupId}</groupId>
-      <artifactId>pulsar-client-admin</artifactId>
+      <artifactId>pulsar-client-admin-original</artifactId>
       <version>${project.version}</version>
     </dependency>
 
