--- a/pulsar-client-tools/pom.xml
+++ b/pulsar-client-tools/pom.xml
@@ -40,7 +40,7 @@
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>pulsar-client-admin</artifactId>
+			<artifactId>pulsar-client-admin-original</artifactId>
 			<version>${project.version}</version>
 			<exclusions>
 				<exclusion>
