--- a/pulsar-testclient/pom.xml
+++ b/pulsar-testclient/pom.xml
@@ -48,7 +48,7 @@
 		</dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>pulsar-client-admin</artifactId>
+            <artifactId>pulsar-client-admin-original</artifactId>
             <version>${project.version}</version>
         </dependency>
 		<dependency>
