--- a/deployment/kubernetes/google-kubernetes-engine/zookeeper.yaml
+++ b/deployment/kubernetes/google-kubernetes-engine/zookeeper.yaml
@@ -32,7 +32,7 @@ data:
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-    name: ssd
+    name: zookeeper-ssd
 provisioner: kubernetes.io/gce-pd
 parameters:
     type: pd-ssd
@@ -138,7 +138,7 @@ spec:
             resources:
                 requests:
                     storage: 10Gi
-            storageClassName: ssd
+            storageClassName: zookeeper-ssd
 
 ---
 
