--- a/buildtools/pom.xml
+++ b/buildtools/pom.xml
@@ -31,6 +31,6 @@
 
   <artifactId>buildtools</artifactId>
   <packaging>jar</packaging>
-  <name>Pulsar Checkstyle Config</name>
+  <name>Pulsar Build Tools</name>
 
 </project>
