Introduce retries for flaky tests

--- a/buildtools/pom.xml
+++ b/buildtools/pom.xml
@@ -33,4 +33,11 @@
   <packaging>jar</packaging>
   <name>Pulsar Build Tools</name>
 
+  <dependencies>
+    <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+    </dependency>
+  </dependencies>
+
 </project>
