Use double to configure loadBalancerOverrideBrokerNicSpeedGbps

--- a/conf/broker.conf
+++ b/conf/broker.conf
@@ -360,7 +360,8 @@ loadBalancerNamespaceMaximumBundles=128
 # reported by Linux is not reflecting the real bandwidth available to the broker.
 # Since the network usage is employed by the load manager to decide when a broker
 # is overloaded, it is important to make sure the info is correct or override it 
-# with the right value here.
+# with the right value here. The configured value can be a double (eg: 0.8) and that
+# can be used to trigger load-shedding even before hitting on NIC limits.
 loadBalancerOverrideBrokerNicSpeedGbps=
 
 # Name of load manager to use
