Add Python-C++ client wrapper codes into `make format` targets

--- a/pulsar-client-cpp/CMakeLists.txt
+++ b/pulsar-client-cpp/CMakeLists.txt
@@ -209,6 +209,7 @@ add_custom_target(format ${BUILD_SUPPORT_DIR}/run_clang_format.py
         ${BUILD_SUPPORT_DIR}/clang_format_exclusions.txt
         ${CMAKE_SOURCE_DIR}/lib
         ${CMAKE_SOURCE_DIR}/tests
+        ${CMAKE_SOURCE_DIR}/python/src
         ${CMAKE_SOURCE_DIR}/include)
 
 # `make check-format` option (for CI test)
