Renamed variable and added flags to conf files

--- a/conf/proxy.conf
+++ b/conf/proxy.conf
@@ -57,6 +57,10 @@ brokerClientAuthenticationParameters=
 # operations and publish/consume from all topics (comma-separated)
 superUserRoles=
 
+# Forward client authorization Credentials to Broker for re authorization
+# make sure authentication is enabled for this to take effect
+forwardAuthorizationCredentials=false
+
 ##### --- TLS --- #####
 
 # Enable TLS in the proxy
