--- a/conf/standalone.conf
+++ b/conf/standalone.conf
@@ -152,6 +152,13 @@ enablePersistentTopics=true
 enableNonPersistentTopics=true
 
 ### --- Authentication --- ###
+# Role names that are treated as "proxy roles". If the broker sees a request with
+#role as proxyRoles - it will demand to see a valid original principal.
+proxyRoles=
+
+# If this flag is set then the broker authenticates the original Auth data
+# else it just accepts the originalPrincipal and authorizes it (if required). 
+authenticateOriginalAuthData=false
 
 # Enable authentication
 authenticationEnabled=false
