--- a/conf/broker.conf
+++ b/conf/broker.conf
@@ -169,6 +169,13 @@ enableRunBookieTogether=false
 enableRunBookieAutoRecoveryTogether=false
 
 ### --- Authentication --- ###
+# Role names that are treated as "proxy roles". If the broker sees a request with
+#role as proxyRoles - it will demand to see a valid original principal.
+proxyRoles=
+
+# If this flag is set then the broker authenticates the original Auth data
+# else it just accepts the originalPrincipal and authorizes it (if required).  
+authenticateOriginalAuthData=false
 
 # Enable TLS
 tlsEnabled=false
